Переписана часть про трёхэтапные протоколы

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -498,6 +498,17 @@
 	language	= {English}
 }
 
+@misc{Massey:Omura:1986,
+	title		= {Method and apparatus for maintaining the privacy of digital messages conveyed by public transmission},
+	author		= {Massey, James Lee and Omura, J.K.},
+	url		= {https://www.google.com/patents/US4567600},
+	year		= {1986},
+	month		= {1},
+	day 		= {28},
+	publisher	= {Google Patents},
+	note		= {US Patent 4,567,600}
+}
+
 @inproceedings{EichinRochlis:1988,
 	author		= {Eichin, Mark W. and Rochlis, Jon A.},
 	title		= {With Microscope and Tweezers: An Analysis of the Internet Virus of November 1988},
