--- a/three-pass_protocols.tex
+++ b/three-pass_protocols.tex
@@ -6,49 +6,58 @@
 Предварительно:
 
 \begin{itemize}
-	\item Стороны $A$ и $B$ соединены незащищённым каналом связи.
+	\item Алиса и Боб соединены незащищённым каналом связи, открытым для прослушивания (но не для модификации) злоумышленником.
 	\item Каждая из сторон имеет пару из открытого и закрытого ключей $K_A$, $k_A$, $K_B$, $k_B$ соответственно.
 	\item Сторонами выбрана и используется коммутативная функция шифрования:
 	\begin{align*}
-		D_{A} \left( E_{A} \left( m \right) \right)	&= m		& ~~\forall ~ m, \left\{ K_A, k_a \right\}; \\
-		E_{A} \left( E_{B} \left( m \right) \right)	&= E_B \left( E_A \left( m \right) \right) & ~~\forall ~ K_A, K_B, m.
+		D_{A} \left( E_{A} \left( X \right) \right)	&= X		& ~~\forall ~ X, \left\{ K_A, k_a \right\}; \\
+		E_{A} \left( E_{B} \left( X \right) \right)	&= E_B \left( E_A \left( X \right) \right) & ~~\forall ~ K_A, K_B, X.
 	\end{align*}
 \end{itemize}
 
 Протокол состоит из трёх шагов (отсюда и название).
 \begin{enumerate}
     \item Алиса создаёт новый секретный сеансовый ключ $K_S$, шифрует его с помощью своего ключа $K_A$ и посылает сообщение Бобу:
-        \[ A \rightarrow B: ~ E_A \left( K_S \right). \]
+        \[ Alice \rightarrow ~ E_A \left( K_S \right) ~ \rightarrow Bob. \]
     \item Боб получает это сообщение, шифрует его с помощью своего ключа $K_B$ и посылает сообщение Алисе:
-        \[ A \leftarrow B: ~ E_B \left( E_A \left( K_S \right) \right). \]
+        \[ Bob \rightarrow ~ E_B \left( E_A \left( K_S \right) \right) ~ \rightarrow Alice. \]
     Алиса, получив сообщение $E_B \left( E_A \left( K_S \right) \right)$, использует свой закрытый ключ $k_A$ для расшифрования:
-            \[ D_A \left( E_B \left( E_A \left( K_S \right) \right) \right) = E_B \left( K_S \right). \]
+	\[ D_A \left( E_B \left( E_A \left( K_S \right) \right) \right) = D_A \left( E_A \left( E_B \left( K_S \right) \right) \right) = E_B \left( K_S \right). \]
     \item Алиса передаёт Бобу сообщение, в котором новый секретный сеансовый ключ зашифрован уже только ключом Боба:
-        \[ A \rightarrow B: ~ E_B \left( K_S \right). \]
+        \[ Alice \rightarrow ~ E_B \left( K_S \right) ~ \rightarrow Bob. \]
     Боб, получив сообщение $E_B \left( K_S \right)$, использует свой ключ $k_B$ для расшифрования:
-            \[ D_B \left( E_B \left( K_S \right) \right) = K_S. \]
+	\[ D_B \left( E_B \left( K_S \right) \right) = K_S. \]
 \end{enumerate}
 
 В результате стороны получают общий секретный ключ $K_S$.
 
 Общим недостатком всех подобных протоколов является отсутствие аутентификации сторон. Конечно, в случае пассивного криптоаналитика это не требуется, но в реальной жизни всё-таки нужно рассматривать все возможные модели (в том числе активного криптоаналитика) и использовать такие протоколы, которые предполагают взаимную аутентификацию сторон.
 
-\subsection[Тривиальный случай]{Тривиальный случай}
+\subsection{Тривиальный вариант}
 
-Приведём пример протокола на основе такой <<неудачной>> с точки зрения безопасности функции, как XOR.
+Приведём пример протокола на основе функции XOR (побитовое сложение 2). Хотя данная функция может использоваться как фундамент для построения систем совершенной криптостойкости (см. главу~\ref{chapter:perfect_secure_systems}), для трёхпроходного протокола это неудачный выбор.
+
+Перед началом протокола обе стороны имеют свои секретные ключи $K_A$ и $K_B$, представляющие собой случайные двоичные последовательности с равномерным распределением символов. Функция шифрования определяется как $E_i( X ) = X \oplus K_i$, где $X$ это сообщение, а $K_i$ -- секретный ключ. Очевидно, что:
+
+\[ \forall i, j, X: E_i \left( E_j \left( X \right) \right) = X \oplus K_j \oplus K_i = X \oplus K_i \oplus K_j = E_j \left( E_i \left( X \right) \right) \]
 
 \begin{enumerate}
-    \item $A$ имеет функцию шифрования совершенной секретности $E_{K_A}(K) = K \oplus K_A$, где $K_A$ -- двоичная последовательность с равномерным распределением символов. $A$ посылает сообщение стороне $B$:
-            \[ A \rightarrow B: ~ E_{K_A}(K) = K \oplus K_A. \]
-    \item $B$ использует такую же функцию шифрования совершенной секретности с ключом $K_B$ (двоичная последовательность с равномерным распределением символов). $B$ шифрует полученное сообщение и отправляет это сообщение $A$:
-            \[ A \leftarrow B: ~ E_{K_A}(K) \oplus K_B = K \oplus K_A \oplus K_B. \]
-    \item Сторона $A$, получив сообщение $K \oplus K_A \oplus K_B$, выполняет расшифрование:
-            \[ K \oplus K_A \oplus K_B \oplus K_A = K \oplus K_B. \]
-        Сторона $A$ передаёт стороне $B$ сообщение:
-            \[ A \rightarrow B: ~ K \oplus K_B. \]
-    \item Сторона $B$, получив сообщение $K \oplus K_B$, выполняет расшифрование:
-            \[ K \oplus K_B \oplus K_B = K. \]
-        Обе стороны получают общий секретный ключ $K$.
+    \item Алиса генерирует новый сеансовый ключ, шифрует его своим секретным ключом $K_A$ и посылает Бобу:
+            \[\begin{array}{l}
+		E_A(K) = K \oplus K_A, \\
+		Alice \rightarrow ~ E_A(K) ~ \rightarrow Bob.
+	    \end{array}\]
+    \item Боб шифрует полученное сообщение уже своим ключом и отправляет Алисе:
+            \[\begin{array}{l}
+		E_B(E_A(K)) = K \oplus K_A \oplus K_B, \\
+		Bob \rightarrow ~ E_B(E_A(K)) ~ \rightarrow Alice.
+	    \end{array}\]
+    \item Используя коммутативность операции шифрования, Алиса <<снимает>> шифрование своим ключом и отправляет результат Бобу:
+            \[ D_A \left( E_B \left( E_A \left( K \right) \right) \right) = K \oplus K_A \oplus K_B \oplus K_A = K \oplus K_B = E_B \left( K \right). \]
+            \[ Alice \rightarrow ~ E_B \left( K \right) ~ \rightarrow Bob. \]
+    Боб, получив сообщение $K \oplus K_B$, выполняет расшифрование:
+            \[ D_B( E_B( K ) ) = K \oplus K_B \oplus K_B = K. \]
+    В результате Алиса и Боб знают общий сеансовый ключ $K$.
 \end{enumerate}
 
 Предложенный выбор коммутативной функции шифрования совершенной секретности был назван неудачным, так как существуют ситуации, при которых криптоаналитик может определить ключ $K$. Предположим, что криптоаналитик перехватил все три сообщения:
@@ -59,31 +68,61 @@
 
 \subsection{Бесключевой протокол Шамира}\index{протокол!Шамира бесключевой|(}
 
-Стороны предварительно договариваются о большом простом числе $p \sim 2^{1024}$.
+Стороны предварительно договариваются о большом простом числе $p \sim 2^{1024}$. Каждая из сторон выбирает себе по секретному ключу $a$ и $b$. Эти ключи меньше и взаимно просты с $p-1$. Также стороны приготовили по специальному числу $a'$ и $b'$, которые позволяют им расшифровать сообщение, зашифрованное своим ключом:
+
+\[\begin{array}{l}
+a' = a{-1} \mod (p-1), \\
+a \times a' = 1 \mod (p-1), \\
+\forall X: (X^a)^{a'} = X. \\
+\end{array}\]
+
+Последнее выражение верно по следствию из малой теоремы Ферма\index{теорема!Ферма малая}. Операции шифрования и расшифрования определяются следующим образом (на примере Алисы):
+
+\[\begin{array}{ll}
+\forall X < p:	& E_A( X ) = X^{a} \mod p, \\
+		& D_A( X ) = X^{a'} \mod p, \\
+		& D_A( E_A( X ) ) = X^{aa'} = X \mod p. \\
+\end{array}\]
 
 \begin{enumerate}
-    \item Сторона $A$ задаёт общий секретный ключ $K_S < p$ и выбирает целое число $a$, взаимно простое с $p-1$. $A$ вычисляет и посылает сообщение стороне $B$:
-            \[ A \rightarrow B: ~ K^a \mod p. \]
-        Существует число $c$ такое, что $a c =1 \mod (p-1)$, то есть $a c = 1 + l (p-1)$, где $l$ -- целое число. Число $c$ будет использовано стороной $A$ на следующем этапе.
-    \item Сторона $B$ выбирает целое число $b$, взаимно простое с $p-1$. Используя полученное сообщение, $B$ вычисляет и посылает сообщение стороне $A$:
-            \[ A \leftarrow B: ~ (K_S^a)^b \mod p. \]
-    \item Сторона $A$, получив сообщение, вычисляет
-        \[ \left( K_S^{ab} \right)^c = K^{(1 + l (p-1)) b} = K_S^b \cdot K^{l (p-1) b} = K_S^b \mod p. \]
-        Здесь применена малая теорема Ферма\index{теорема!Ферма малая}: $K^{p-1} = 1 \mod p$, поэтому $\left( K_S^{p-1} \right)^{lb} = 1 \mod p$.
-        $A$ посылает $B$ сообщение:
-            \[ A \rightarrow B: ~ K^b \mod p. \]
-    \item Сторона $B$, получив сообщение $K^{b}\mod p$, вычисляет
-        \[ (K_S^b \mod p)^d = K_S^{bd} \mod p = K_S, \]
-        где $d$ найдено из $b d =1 \mod (p-1)$.
+    \item Алиса создаёт новый сеансовый ключ $K < p$, шифрует его своим секретным ключом $a$ и посылает сообщение Бобу:
+            \[\begin{array}{l}
+		E_A(K) = K ^ a \mod p, \\
+		Alice \rightarrow ~ E_A(K) ~ \rightarrow Bob.
+	    \end{array}\]
+    \item Боб шифрует полученное сообщение уже своим ключом и отправляет Алисе:
+            \[\begin{array}{l}
+		E_B(E_A(K)) = K^{ab} \mod p, \\
+		Bob \rightarrow ~ E_B(E_A(K)) ~ \rightarrow Alice.
+	    \end{array}\]
+    \item Используя коммутативность операции шифрования, Алиса <<снимает>> шифрование своим ключом и отправляет результат Бобу:
+            \[ D_A \left( E_B \left( E_A \left( K \right) \right) \right) = \left( K^{ab} \right) ^{a'} = K^{aa'b} = K^{b} = E_B \left( K \right) \mod p. \]
+            \[ Alice \rightarrow ~ E_B \left( K \right) ~ \rightarrow Bob. \]
+    Боб, получив сообщение $K \oplus K_B$, выполняет расшифрование:
+            \[ D_B( E_B( K ) ) = K \oplus K_B \oplus K_B = K. \]
+    В результате Алиса и Боб знают общий сеансовый ключ $K$.
 \end{enumerate}
 
-Теперь проверим криптостойкость этого протокола. Предположим, что криптоаналитик перехватил три сообщения:
+Предположим, что криптоаналитик перехватил три сообщения:
 \[ \begin{array}{l}
-    y_1 = K_S^a \mod p, \\
-    y_2 = K_S^{ab} \mod p, \\
-    y_3 = K_S^b \mod p. \\
+    y_1 = K^a \mod p, \\
+    y_2 = K^{ab} \mod p, \\
+    y_3 = K^b \mod p. \\
 \end{array} \]
 
-Чтобы найти ключ $K_S$, надо решить систему из этих трёх уравнений, что имеет очень большую вычислительную сложность, неприемлемую с практической точки зрения, если все три числа $a, b, ab$ достаточно велики. Предположим, что $a$ (или $b$) мало. Тогда, вычисляя последовательные степени $y_3$ (или $y_1$), можно найти $a$ (или $b$), сравнивая результат с $y_2$. Зная $a$, легко найти $a^{-1}\mod(p-1)$ и $K=(y_1)^{a^{-1}}\mod p$.
+Чтобы найти ключ $K$, криптоаналитику надо решить систему из этих трёх уравнений, что имеет очень большую вычислительную сложность, неприемлемую с практической точки зрения, если все три числа $a, b, ab$ достаточно велики. Предположим, что $a$ (или $b$) мало. Тогда, вычисляя последовательные степени $y_3$ (или $y_1$), можно найти $a$ (или $b$), сравнивая результат с $y_2$. Зная $a$, легко найти $a^{-1}\mod(p-1)$ и $K=(y_1)^{a^{-1}}\mod p$.
 
 \index{протокол!Шамира бесключевой|)}
+
+\subsection{Криптосистема Мэсси~---~Омуры}\index{протокол!Мэсси~---~Омуры|(}\index{криптосистема!Мэсси~---~Омуры|(}
+
+В 1982 году Джеймс Мэсси и Джим Омура заявили патент (\langen{James Massey, Jim K. Omura},~\cite{Massey:Omura:1986}), улучшающий (по их мнению) бесключевой протокол Шамира. В качестве операции шифрования вместо возведения в степень в мультипликативной группе $\Z_p^*$ они предложили использовать возведение в степень в поле Галуа $\GF{2^n}$. Секретный ключ каждой стороны (для Алисы -- $a$) должен удовлетворять условиям:
+
+\[ \begin{array}{l}
+ a \in \GF{2^n}, \\
+ gfd \left( a, x^{ n-1 } + x^{ n-2 } + ... + x + 1 \right) = 1. \\
+\end{array} \]
+
+В остальном протокол выглядит аналогично.
+
+\index{протокол!Мэсси~---~Омуры|)}\index{криптосистема!Мэсси~---~Омуры|)}
