--- a/perfect_secure_systems.tex
+++ b/perfect_secure_systems.tex
@@ -1,4 +1,4 @@
-\chapter{Совершенная криптостойкость}\index{криптостойкость!совершенная|(}
+\chapter{Совершенная криптостойкость}\label{chapter:perfect_secure_systems}\index{криптостойкость!совершенная|(}
 \selectlanguage{russian}
 
 Рассмотрим модель криптосистемы, в которой Алиса выступает источником сообщений $m \in \group{M}$. Алиса использует некоторую функцию шифрования, результатом вычисления которой является шифртекст $c \in \group{C}$:
