--- a/foreword.tex
+++ b/foreword.tex
@@ -3,7 +3,7 @@
 \markboth{ПРЕДИСЛОВИЕ}{ПРЕДИСЛОВИЕ}
 \selectlanguage{russian}
 
-В настоящем пособии рассмотрены только основные математические методы защиты информации, и среди них основной акцент сделан на криптографическую защиту, которая включает симметричные и несимметричные методы шифрования, формирование секретных ключей, протоколы ограничения доступа и аутентификации сообщений и пользователей. Кроме того, в пособии рассматриваются типовые уязвимости операционных и информационно-вычислительных систем.
+В настоящем пособии рассмотрены только основные математические методы защиты информации, и среди них главный акцент сделан на криптографическую защиту, которая включает симметричные и несимметричные методы шифрования, формирование секретных ключей, протоколы ограничения доступа и аутентификации сообщений и пользователей. Кроме того, в пособии рассматриваются типовые уязвимости операционных и информационно-вычислительных систем.
 
 \section*{Благодарности}
 \addcontentsline{toc}{section}{Благодарности}
