--- a/stream-ciphers.tex
+++ b/stream-ciphers.tex
@@ -1,7 +1,7 @@
 \chapter{Потоковые шифры}\label{chapter-stream-ciphers}
 \selectlanguage{russian}
 
-Потоковые шифры осуществляют посимвольное шифрование открытого текста. Под символом алфавита открытого текста могут пониматься как отдельные биты (побитовое шифрование), так и байты (побайтовое шифрование). Поэтому можно говорить о в какой-то мере условном разделении блочных и поковых шифров: например 64-битная буква - один блок. Общий вид большинства потоковых шифров приведён на рис.~\ref{fig:stream-cipher}.
+Потоковые шифры осуществляют посимвольное шифрование открытого текста. Под символом алфавита открытого текста могут пониматься как отдельные биты (побитовое шифрование), так и байты (побайтовое шифрование). Поэтому можно говорить о в какой-то мере условном разделении блочных и поковых шифров: например, 64-битная буква - один блок. Общий вид большинства потоковых шифров приведён на рис.~\ref{fig:stream-cipher}.
 
 \begin{figure}[hb]
 	\centering
