--- a/key_distribution_protocols.tex
+++ b/key_distribution_protocols.tex
@@ -4,7 +4,7 @@
 Задача распространения ключей является одной из множества задач построения надёжной сети общения многих абонентов. Задача состоит в получении в нужный момент времени двумя легальными абонентами сети секретного сессионного ключа шифрования (и аутентификации сообщений). Хорошим решением данной задачи будем считать такой протокол распространения ключей, который удовлетворяет следующим условиям.
 
 \begin{itemize}
-	\item В результате работы протокола должен между двумя абонентами должны быть сформирован секретный сессионный ключ.
+	\item В результате работы протокола между двумя абонентами должен быть сформирован секретный сессионный ключ.
 	\item Успешное окончание работы протокола распространение ключей должно означать успешную взаимную аутентификацию абонентов. Не должно быть такого, что протокол успешно завершился с точки зрения одной из сторон, а вторая сторона при этом представлена злоумышленником.
 	\item К участию в работе протокола должны допускаться только легальные пользователи сети. Внешний пользователь не должен иметь возможность получить общий сессионный ключ с кем-либо из абонентов.
 	\item Добавление нового абонента в сеть (или исключение из неё) не должно требовать уведомления всех участников сети.
