--- a/Short_history_of_cryptography.tex
+++ b/Short_history_of_cryptography.tex
@@ -16,7 +16,7 @@
 
 \begin{itemize}
 	\item \texttt{Иер. 25:26}: и всех царей севера, близких друг к другу и дальних, и все царства земные, которые на лице земли, а царь Сесаха выпьет после них.
-	\item \texttt{Иер. 51:41}: Как взят Сесах, и завоевана слава всей земли! Как сделался Вавилон ужасом между народами!
+	\item \texttt{Иер. 51:41}: Как взят Сесах, и завоёвана слава всей земли! Как сделался Вавилон ужасом между народами!
 \end{itemize}
 
 В этих отрывках слово <<Сесах>> относится к государству, не упоминаемому в других источниках, но если в написании слова <<Сесах>> на иврите (\cjRL{/s/sK}) заменить первую букву алфавита на последнюю, вторую на предпоследнюю и так далее, то получится <<Бавель>> (\cjRL{bbl})~--- одно из названий Вавилона.
