--- a/blockchain.tex
+++ b/blockchain.tex
@@ -92,7 +92,7 @@
 
 Но позволит ли это злоумышленнику не включать что-то в цепочку транзакций? Нет. Потому что после его блока с вероятностью $1 - p$ будет следовать блок <<обычного>> майнера, который с радостью (пропорциональной комиссии-награде) включит все транзакции в свой блок.
 
-Однако ситуация меняется, если мощности злоумышленника составляют более 50\% от мощности сети. В этом случае, если после блока злоумышленника был с вероятностью $1 - p$ сгенерирован <<обычный>> блок, злоумышленник его может просто проигнорировать и продолжать генерировать новые блоки, как будто он единственный майнер в сети. Тогда если среднее время генерации одного блока всеми мощностями $t$, то за время $T$ злоумышленник сможет сгенерировать $N_E = p \times T / t$, а легальные пользователи $N_L = (1 - p) \times T / t$ блоков, $N_E > N_L$. Даже если с некоторой вероятностью легальные пользователи сгенерируют 2 блока быстрее, чем злоумышленник один, последний всё равно <<догонит и перегонит>> <<легальную>> цепочку примерно за время $t / (2p - 1)$. Так как в blockchain есть договоренность, что за текущее состояние сети принимается наиболее длинная цепочка, именно цепочка злоумышленника всегда будет восприниматься правильной. Получается, что злоумышленник сможет по своему желанию включать или не включать транзакции в цепочки.
+Однако ситуация меняется, если мощности злоумышленника составляют более 50\% от мощности сети. В этом случае, если после блока злоумышленника был с вероятностью $1 - p$ сгенерирован <<обычный>> блок, злоумышленник его может просто проигнорировать и продолжать генерировать новые блоки, как будто он единственный майнер в сети. Тогда если среднее время генерации одного блока всеми мощностями $t$, то за время $T$ злоумышленник сможет сгенерировать $N_E = p \times T / t$, а легальные пользователи $N_L = (1 - p) \times T / t$ блоков, $N_E > N_L$. Даже если с некоторой вероятностью легальные пользователи сгенерируют 2 блока быстрее, чем злоумышленник один, последний всё равно <<догонит и перегонит>> <<легальную>> цепочку примерно за время $t / (2p - 1)$. Так как в blockchain есть договорённость, что за текущее состояние сети принимается наиболее длинная цепочка, именно цепочка злоумышленника всегда будет восприниматься правильной. Получается, что злоумышленник сможет по своему желанию включать или не включать транзакции в цепочки.
 
 Правда, пользоваться чужими деньгами злоумышленник всё равно не сможет -- так как все блоки транзакций проверяются на внутреннюю непротиворечивость и корректность всех включённых в блок транзакций.
 
