--- a/pki_key_length.tex
+++ b/pki_key_length.tex
@@ -2,7 +2,7 @@
 \selectlanguage{russian}
 
 В таблице~\ref{tab:recommended-key-lengths} приведены битовые длины ключей для криптосистем.
-%Традиционные рекомендации основаны на аппроксимации существующих алгоритмов для взлома на 10-30 лет вперед.
+%Традиционные рекомендации основаны на аппроксимации существующих алгоритмов для взлома на 10-30 лет вперёд.
 
 \begin{table}[!ht]
     \centering
