--- a/prime_numbers_count.tex
+++ b/prime_numbers_count.tex
@@ -23,7 +23,7 @@
     \[ \Delta_L = 2 \cdot 3 \cdot 5 \cdot ~\cdots~ \cdot p_L = \prod \limits_{p \leq p_L} p \] 
 произведение первых $L$ простых чисел. Из теоремы о распределении простых чисел следует:
     \[ L \approx \frac{p_L}{\ln p_L}, ~~ p_L \approx L \ln L. \]
-%TODO Что то из Чебышева
+%TODO Что то из Чебышёва
 
 Вероятность того, что случайное \emph{нечётное} число не будет иметь общих делителей с первыми $L$ простыми числами, равна
     \[ P(L) = \prod \limits_{3 \leq p \leq p_L} \left( 1 - \frac{1}{p} \right). \]
