+ @rfoofr + @Vikont133 + @zankin to foreword

--- a/foreword.tex
+++ b/foreword.tex
@@ -13,6 +13,8 @@
 \begin{small}
 \begin{itemize}[leftmargin=*]\itemsep1pt \parskip0pt \parsep0pt
 
+	\item[] Владимир Аверьянов\begin{tiny} (201-113 гр.)\end{tiny} %rfoofr
+
 	\item[] Алипаша Бабаев\begin{tiny} (201-311 гр.)\end{tiny} %alishnik
 	\item[] Татьяна Бакланова\begin{tiny} (201-211 гр.)\end{tiny}
 	\item[] Дмитрий Банков\begin{tiny} (201-011 гр.)\end{tiny}
@@ -27,6 +29,7 @@
 	\item[] Илья Васильев\begin{tiny} (201-217 гр.)\end{tiny}
 	\item[] Эмиль Вахитов\begin{tiny} (201-114 гр.)\end{tiny}
 	\item[] Дмитрий Вербицкий\begin{tiny} (201-119 гр.)\end{tiny}
+	\item[] Константин Виноградов\begin{tiny} (201-114 гр.)\end{tiny} %Vikont133
 
 	\item[] Тагир Гадельшин\begin{tiny} (201-119 гр.)\end{tiny}
 	\item[] Марат Гаджибутаев\begin{tiny} (201-018 гр.)\end{tiny}
@@ -45,7 +48,7 @@
 
 	\item[] Сергей Жестков\begin{tiny} (201-013 гр.)\end{tiny}
 
-	\item[] Виталий Занкин\begin{tiny} (201-111 гр.)\end{tiny}
+	\item[] Виталий Занкин\begin{tiny} (201-111 гр.)\end{tiny} %zankin
 	\item[] Дмитрий Зборовский\begin{tiny} (201-119 гр.)\end{tiny}
 
 	\item[] Марат Ибрагимов\begin{tiny} (201-114 гр.)\end{tiny}
