Исправление обозначений единиц изменения согласно #2208 by @aidarfaskh

--- a/foreword.tex
+++ b/foreword.tex
@@ -130,6 +130,7 @@
 
 	\item[] Марсель Файзуллин\begin{tiny} (201-114 гр.)\end{tiny}
 	\item[] Нияз Фазлыев\begin{tiny} (201-114 гр.)\end{tiny} %NiyazFazliev
+	\item[] Айдар Фасхутдинов\begin{tiny} (201-114 гр.)\end{tiny} %aidarfaskh
 	\item[] Наталья Федотова\begin{tiny} (201-212 гр.)\end{tiny}
 	\item[] Данил Филиппов\begin{tiny} (201-115 гр.)\end{tiny}
 
