--- a/wide-mouth_frog.tex
+++ b/wide-mouth_frog.tex
@@ -13,7 +13,7 @@
 	\item Доверенный центр, используя полученный незашифрованный идентификатор $A$, находит у себя в базе данных легальных абонентов секретный ключ Алисы и расшифровывает им пакет данных. Проверяет метку времени (что пакет не очень старый). Далее он отправляет похожий пакет данных Бобу, зашифрованный его секретным ключом:
 	\[ Trent \rightarrow \{ E_B \left( T_T, A, K \right) \} \rightarrow Bob \]
 	Боб, кроме расшифрования пакета, также проверяет метку времени доверенного центра.
-\end{enumerate}}
+\end{enumerate}
 
 По окончании протокола у Алисы и Боба есть общий сеансовый ключ $K$.
 
