Стиль per #2243 by @ViktorSuharev

--- a/foreword.tex
+++ b/foreword.tex
@@ -118,7 +118,7 @@
 	\item[] Игорь Степанов\begin{tiny} (201-213 гр.)\end{tiny}
 	\item[] Мария Столяренко\begin{tiny} (201-214 гр.)\end{tiny}
 	\item[] Светлана Субботина\begin{tiny} (201-316 гр.)\end{tiny} %sonne122
-	\item[] Виктор Сухарев\begin{tiny} (201-114 гр.)\end{tiny}
+	\item[] Виктор Сухарев\begin{tiny} (201-114 гр.)\end{tiny} %ViktorSuharev
 
 	\item[] Буй Зуи Тан\begin{tiny} (201-112 гр.)\end{tiny}
 	\item[] Михаил Тверье\begin{tiny} (201-313 гр.)\end{tiny} %MishaTvr
