Исправление числа существительного согласно #2287 by @EvgeniyaNikolskaya

--- a/foreword.tex
+++ b/foreword.tex
@@ -97,7 +97,7 @@
 
 	\item[] Хыу Чунг Нгуен\begin{tiny} (201-015 гр.)\end{tiny} %huutrung
 	\item[] Артём Никитин\begin{tiny} (201-012 гр.)\end{tiny}
-	\item[] Евгения Никольская\begin{tiny} (201-115 гр.)\end{tiny}
+	\item[] Евгения Никольская\begin{tiny} (201-115 гр.)\end{tiny} %EvgeniyaNikolskaya
 
 	\item[] Даниил Охлопков\begin{tiny} (201-311 гр.)\end{tiny}
 
