--- a/Cryptanalysis_methods_and_types_of_attacks.tex
+++ b/Cryptanalysis_methods_and_types_of_attacks.tex
@@ -41,7 +41,7 @@
 
 Существуют ситуации, когда пользователи $A$ и $B$ не доверяют друг другу. Например, $A$ -- банк, $B$ -- получатель денег. $A$ утверждает, что деньги были переведены, $B$ - что перевода не было. Решение задачи аутентификации и неотрицаемости состоит в обеспечении \emph{электронной подписью}\index{электронная подпись} каждого из абонентов. Предварительно надо решить задачу о генерировании и распределении секретных ключей.
 
-В общем случае, системы защиты информации должны обеспечивать:
+В общем случае системы защиты информации должны обеспечивать:
 \begin{itemize}
     \item конфиденциальность\index{конфиденциальность} (защита от наблюдения),
     \item целостность\index{целостность} (защита от изменения),
