Исправление падежа per #2356 by @zhitHappens

--- a/foreword.tex
+++ b/foreword.tex
@@ -47,6 +47,7 @@
 	\item[] Дмитрий Ермилов\begin{tiny} (201-311 гр.)\end{tiny} %schnee-katze
 
 	\item[] Сергей Жестков\begin{tiny} (201-013 гр.)\end{tiny}
+	\item[] Андрей Житов\begin{tiny} (201-114 гр.)\end{tiny} %zhitHappens
 
 	\item[] Виталий Занкин\begin{tiny} (201-111 гр.)\end{tiny} %zankin
 	\item[] Дмитрий Зборовский\begin{tiny} (201-119 гр.)\end{tiny}
