--- a/foreword.tex
+++ b/foreword.tex
@@ -63,7 +63,7 @@
 	\item[] Константин Ковальков\begin{tiny} (201-015 гр.)\end{tiny}
 	\item[] Анастасия Коробкина\begin{tiny} (201-312 гр.)\end{tiny} %korobkina
 	\item[] Илья Копцов\begin{tiny} (201-115 гр.)\end{tiny} %IlyaKoptsov
-	\item[] Андрей Кочетыгов\begin{tiny} (201-111 гр.)\end{tiny}
+	\item[] Андрей Кочетыгов\begin{tiny} (201-111 гр.)\end{tiny} %anko1774
 	\item[] Сергей Кошечкин\begin{tiny} (201-213 гр.)\end{tiny}
 	\item[] Александр Кравцов\begin{tiny} (201-116 гр.)\end{tiny}
 	\item[] Анастасия Красавина\begin{tiny} (201-217 гр.)\end{tiny}
