--- a/quantum_protocols.tex
+++ b/quantum_protocols.tex
@@ -60,7 +60,7 @@
 
 \begin{itemize}
 	\item аналогичное состояние с вероятностью 50\% (вероятность выбора пары ортогональных направлений поляризатора, совпадающих с выбранной Алисой);
-	\item одно из двух неортогональных оригинальному состояний с вероятностью 25\% каждое.
+	\item одно из двух неортогональных оригинальному состояний, с вероятностью 25\% каждое.
 \end{itemize}
 
 Таким образом, условная энтропия величины $Y'$, измеренной Евой, относительно величины Y, переданной Алисой, равна:
