--- a/secret-sharing.tex
+++ b/secret-sharing.tex
@@ -5,7 +5,7 @@
 
 Идея \emph{пороговой} $(K, N)$-схемы\index{разделение секрета!пороговое} разделения общего секрета среди $N$ пользователей состоит в следующем. Доверенная сторона хочет распределить некий секрет $K_0$ между $N$ пользователями таким образом, что:
 \begin{itemize}
-    \item любые $m_1: K \leq m_1 \leq N$, легальных пользователей могут получить секрет (или доступ к секрету), если предъявят свои секретные ключи;
+    \item любые $m_1: K \leq m_1 \leq N$ легальных пользователей могут получить секрет (или доступ к секрету), если предъявят свои секретные ключи;
     \item любые $m_2: m_2 < K$, легальных пользователей не могут получить секрет и не могут определить (вычислить) этот секрет, даже решив трудную в вычислительном смысле задачу.
 \end{itemize}
 
