Add @Ozzmorn to foreword

--- a/foreword.tex
+++ b/foreword.tex
@@ -100,6 +100,7 @@
 	\item[] Артём Никитин\begin{tiny} (201-012 гр.)\end{tiny}
 	\item[] Евгения Никольская\begin{tiny} (201-115 гр.)\end{tiny} %EvgeniyaNikolskaya
 
+	\item[] Александр Ометов\begin{tiny} (201-113 гр.)\end{tiny} %Ozzmorn
 	\item[] Даниил Охлопков\begin{tiny} (201-311 гр.)\end{tiny}
 
 	\item[] Дмитрий Паршин\begin{tiny} (201-313 гр.)\end{tiny} %dmitryparshin
