Per #2456 by goriand

--- a/foreword.tex
+++ b/foreword.tex
@@ -36,7 +36,7 @@
 	\item[] Ильназ Гараев\begin{tiny} (201-113 гр.)\end{tiny}
 	\item[] Евгений Глушков\begin{tiny} (201-012 гр.)\end{tiny}
 	\item[] Иван Голованов\begin{tiny} (201-312 гр.)\end{tiny} %ivangolovanov
-	\item[] Андрей Горбунов\begin{tiny} (201-116 гр.)\end{tiny}
+	\item[] Андрей Горбунов\begin{tiny} (201-116 гр.)\end{tiny} %goriand
 	\item[] Елена Гундрова\begin{tiny} (201-214 гр.)\end{tiny}
 	\item[] Алексей Гусаров\begin{tiny} (201-216 гр.)\end{tiny}
 	\item[] Наталья Гусева\begin{tiny} (201-216 гр.)\end{tiny}
